--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ nav li {
 nav a {
   padding-right: 20px;
   padding-left: 20px;
-  padding-top: 44px;
-  padding-bottom: 44px;
+  padding-top: 45px;
+  padding-bottom: 45px;
   border-top: 3px solid white;
 }
 
@@ -48,7 +48,8 @@ nav a:hover {
   border-top: none;
 }
 
-/******* Recherche ******/
+/**************** Recherche ****************/
+
 .search {
   margin: 30px;
 }
@@ -83,3 +84,27 @@ nav a:hover {
 }
 
 /*************Filters**************/
+.filters {
+  display: flex;
+  align-items: center;
+}
+
+ul {
+  display: flex;
+  list-style-type: none;
+}
+
+.filters li {
+  font-weight: bold;
+  border: 2px solid #f2f2f2;
+  border-radius: 200px;
+  padding: 0px 20px 0 0;
+}
+
+.logo_filters {
+  background-color: #deebff;
+  color: #0065fc;
+  border-radius: 200px;
+  padding: 15px;
+  margin-right: 25px;
+}
