--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ nav li {
 nav a {
   padding-right: 20px;
   padding-left: 20px;
-  padding-top: 44px;
-  padding-bottom: 44px;
+  padding-top: 45px;
+  padding-bottom: 45px;
   border-top: 3px solid white;
 }
 
@@ -48,21 +48,22 @@ nav a:hover {
   border-top: none;
 }
 
-/******* Recherche ******/
+/**************** Recherche ****************/
+
 .search {
   margin: 30px;
 }
 
 .form {
   display: flex;
-  width: 30px;
-  margin: 20px 0 20px 0;
+  margin: 20px 0px 20px 0;
 }
 
 .fa-map-marker-alt {
   padding: 15px;
   background-color: #f2f2f2;
   border-radius: 15px 0 0 15px;
+  margin-left: 30px;
 }
 
 .city {
@@ -76,6 +77,7 @@ nav a:hover {
 .btn_search {
   padding: 15px;
   font-weight: bold;
+  font-size: 1rem;
   color: white;
   background-color: #0065fc;
   border: none;
@@ -83,3 +85,45 @@ nav a:hover {
 }
 
 /*************Filters**************/
+.filters {
+  display: flex;
+  align-items: center;
+  margin-left: 30px;
+}
+
+ul {
+  display: flex;
+  list-style-type: none;
+}
+
+.filters li {
+  font-weight: bold;
+  border: 3px solid #f2f2f2;
+  border-radius: 200px;
+  padding: 0px 20px 0 0;
+  margin-right: 20px;
+}
+
+.logo_filters {
+  background-color: #deebff;
+  color: #0065fc;
+  border-radius: 200px;
+  padding: 15px;
+  margin-right: 25px;
+}
+
+.filters li:hover {
+  background-color: #0065fc;
+}
+
+.info p {
+  display: inline;
+}
+
+.fa-info {
+  border: 3px solid #f2f2f2;
+  color: #0065fc;
+  border-radius: 100%;
+  padding: 5px 10px 5px 10px;
+  margin: 20px 15px 0px 30px;
+}
