--- a/style.css
+++ b/style.css
@@ -127,3 +127,34 @@ ul {
   padding: 5px 10px 5px 10px;
   margin: 20px 15px 0px 30px;
 }
+
+/************** Hébergements à Marseille et les plus populaires ***************/
+.main_accomodations {
+  display: flex;
+}
+
+.accomodations_marseille {
+  background-color: #f2f2f2;
+  border-radius: 20px;
+  width: 60%;
+}
+
+.first_hotel {
+  background-color: #f2f2f2;
+  display: flex;
+}
+
+.first_hotel article {
+  background-color: white;
+  border: 4px solid red;
+  border-radius: 20px;
+  width: 50%;
+  height: 400px;
+}
+
+.hotel img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 20px 20px 0 0;
+}
