Ajout du css pour les plus populaires

--- a/style.css
+++ b/style.css
@@ -201,3 +201,34 @@ nav a:hover {
 }
 
 /***************** Les plus populaires *******************/
+
+.most_popular {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f2f2f2;
+  border-radius: 20px;
+  width: 30%;
+  padding-bottom: 30px;
+}
+
+.title_most_popular {
+  width: 80%;
+  padding-left: 30px;
+  margin-top: 20px;
+}
+
+.hotel_2 {
+  background-color: white;
+  border: 4px solid transparent;
+  border-radius: 20px;
+  width: 90%;
+  height: 150px;
+}
+
+.hotel_2 img {
+  width: 40%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px 0 0 20px;
+}
