Dimension entre section et aside de hébergements à marseille

--- a/style.css
+++ b/style.css
@@ -116,7 +116,8 @@ nav a:hover {
 }
 
 .filters li:hover {
-  border: 3px solid #0065fc;
+  background-color: #0065fc;
+  font-style: italic;
 }
 
 .info p {
@@ -132,16 +133,21 @@ nav a:hover {
 }
 
 /************** Hébergements à Marseille ***************/
-.main_hosting {
+#hosting {
   display: flex;
-  justify-content: space-around;
-  margin-top: 30px;
+  justify-content: space-between;
+  margin: 30px;
 }
 
+#main_hosting {
+  display: flex;
+  width: 100%;
+  height: 80%;
+}
 .hosting_marseille {
   background-color: #f2f2f2;
   border-radius: 20px;
-  width: 60%;
+  width: 95%;
   height: 60%;
 }
 
@@ -208,7 +214,7 @@ nav a:hover {
   align-items: center;
   background-color: #f2f2f2;
   border-radius: 20px;
-  width: 30%;
+  width: 40%;
   padding-bottom: 30px;
 }
 
