--- a/style.css
+++ b/style.css
@@ -141,9 +141,10 @@ nav a:hover {
 
 #main_hosting {
   display: flex;
-  width: 100%;
-  height: 80%;
+  width: 5487%;
+  height: 3875%;
 }
+
 .hosting_marseille {
   background-color: #f2f2f2;
   border-radius: 20px;
@@ -209,17 +210,21 @@ nav a:hover {
 /***************** Les plus populaires *******************/
 
 .most_popular {
+  width: 2643%;
+  height: 3875%;
+  background-color: #f2f2f2;
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #f2f2f2;
-  border-radius: 20px;
-  width: 40%;
   padding-bottom: 30px;
 }
 
 .title_most_popular {
-  width: 80%;
+  width: 85%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding-left: 30px;
   margin-top: 20px;
 }
@@ -228,13 +233,28 @@ nav a:hover {
   background-color: white;
   border: 4px solid transparent;
   border-radius: 20px;
-  width: 90%;
-  height: 150px;
+  box-shadow: 1px 1px 8px #e2e2e2;
+  width: 72%;
+  height: 10vw;
+  margin: 15px;
+  display: flex;
 }
 
 .hotel_2 img {
-  width: 40%;
-  height: 100%;
+  width: 9vw;
+  height: 10vw;
   object-fit: cover;
   border-radius: 20px 0 0 20px;
+}
+
+.hotel_2 h3 {
+  margin: 7px 0 4px 15px;
+}
+
+.hotel_2 p {
+  margin: 2px 0 5px 15px;
+}
+
+.stars_popular {
+  margin: 45px 0 0 15px;
 }
