--- a/style.css
+++ b/style.css
@@ -258,3 +258,7 @@ nav a:hover {
 .stars_popular {
   margin: 45px 0 0 15px;
 }
+
+/******************* Activités ******************************/
+
+/************************ Footer **************************/
