Fin du html et css en attente des media queries

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ a {
   color: black;
 }
 
-/************header*****************/
+/********************** Header ****************************/
 
 nav {
   display: flex;
@@ -29,8 +29,8 @@ nav li {
 nav a {
   padding-right: 20px;
   padding-left: 20px;
-  padding-top: 45px;
-  padding-bottom: 45px;
+  padding-top: 44px;
+  padding-bottom: 44px;
   border-top: 3px solid white;
 }
 
@@ -48,7 +48,7 @@ nav a:hover {
   border-top: none;
 }
 
-/**************** Recherche ****************/
+/******************** Recherche********************/
 
 .search {
   margin: 30px;
@@ -56,14 +56,14 @@ nav a:hover {
 
 .form {
   display: flex;
-  margin: 20px 0px 20px 0;
+  width: 30vw;
+  margin: 20px 0 20px 0;
 }
 
 .fa-map-marker-alt {
-  padding: 15px;
   background-color: #f2f2f2;
+  padding: 15px;
   border-radius: 15px 0 0 15px;
-  margin-left: 30px;
 }
 
 .city {
@@ -71,40 +71,42 @@ nav a:hover {
   font-weight: bold;
   border-right: none;
   border: 2px solid #f2f2f2;
+  height: 53px;
   font-size: 1rem;
 }
 
 .btn_search {
-  padding: 15px;
-  font-weight: bold;
-  font-size: 1rem;
   color: white;
+  font-weight: bold;
+  padding: 15px;
   background-color: #0065fc;
   border: none;
   border-radius: 0 15px 15px 0;
 }
 
-/*************Filters**************/
+/********************** Filters ******************/
+
 .filters {
   display: flex;
   align-items: center;
-  margin-left: 30px;
 }
 
-.filters ul {
+h3 + ul {
   display: flex;
-  list-style-type: none;
+  list-style: none;
+  flex-wrap: wrap;
 }
 
 .filters li {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  font-weight: bold;
   border: 3px solid #f2f2f2;
   border-radius: 200px;
-  padding: 0px 20px 0 0;
-  margin-right: 20px;
+  font-weight: bold;
+  padding: 0 20px 0 0;
+  margin-top: 10px;
+  margin-left: 25px;
 }
 
 .logo_filters {
@@ -112,44 +114,37 @@ nav a:hover {
   color: #0065fc;
   border-radius: 200px;
   padding: 15px;
-  margin-right: 20px;
+  margin-right: 25px;
 }
 
 .filters li:hover {
-  background-color: #0065fc;
-  font-style: italic;
+  background-color: #deebff;
 }
 
 .info p {
   display: inline;
 }
 
-.fa-info {
-  border: 3px solid #f2f2f2;
+.info .fas {
   color: #0065fc;
+  border: 3px solid #f2f2f2;
   border-radius: 100%;
-  padding: 5px 10px 5px 10px;
-  margin: 20px 15px 0px 30px;
+  margin-right: 10px;
+  font-size: 16px;
+  padding: 7px 11px 7px 11px;
 }
 
-/************** Hébergements à Marseille ***************/
-#hosting {
-  display: flex;
-  justify-content: space-between;
-  margin: 50px;
-}
+/********************* Hébergements à Marseille ***********************/
 
-#main_hosting {
+.main_hosting {
   display: flex;
-  width: 5487%;
-  height: 100%;
+  justify-content: space-around;
 }
 
 .hosting_marseille {
   background-color: #f2f2f2;
   border-radius: 20px;
-  width: 95%;
-  height: 60%;
+  width: 60%;
 }
 
 .hosting_marseille h2 {
@@ -160,23 +155,22 @@ nav a:hover {
 .hosting_marseille article {
   background-color: white;
   border: 4px solid transparent;
-  box-shadow: 1px 1px 15px #d1d1d1;
   border-radius: 20px;
-  margin: 0 20px 0 20px;
-  width: 40%;
-  height: 220px;
+  box-shadow: 1px 1px 8px #e2e2e2;
+  width: 30%;
+  height: 13.5vw;
 }
 
 .first_hotel,
 .second_hotel {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin: 30px;
 }
 
 .hotel img {
   width: 100%;
-  height: 60%;
+  height: 8vw;
   object-fit: cover;
   border-radius: 20px 20px 0 0;
 }
@@ -186,7 +180,7 @@ nav a:hover {
 }
 
 .hotel p {
-  margin: 5px 0px 5px 10px;
+  margin: 2px 0 5px 10px;
 }
 
 .stars {
@@ -195,23 +189,23 @@ nav a:hover {
 
 .full {
   color: #0065fc;
+  margin: 0;
 }
 
 .empty {
-  color: #d9d9d9;
+  color: #e2e2e2;
+  margin: 0;
 }
 
 .view_more {
-  font-size: 1.3em;
-  font-weight: bold;
-  padding: 20px 0 50px 40px;
+  padding-left: 40px;
+  padding-top: 20px;
 }
 
-/***************** Les plus populaires *******************/
+/********************* Les plus populaires ************************/
 
 .most_popular {
-  width: 2643%;
-  height: 3875%;
+  width: 32%;
   background-color: #f2f2f2;
   border-radius: 20px;
   display: flex;
@@ -256,9 +250,109 @@ nav a:hover {
 }
 
 .stars_popular {
-  margin: 45px 0 0 15px;
+  margin: 45px 10px 0 15px;
 }
 
-/******************* Activités ******************************/
+/************************ Activités**********************/
 
-/************************ Footer **************************/
+#activities {
+  margin: 30px;
+  margin-top: 50px;
+  margin-bottom: 45px;
+}
+
+#activities h2 {
+  margin-left: 25px;
+}
+
+.activities article {
+  border: 1px solid #f2f2f2;
+  border-radius: 20px;
+  box-shadow: 1px 1px 8px #e2e2e2;
+}
+
+.activities {
+  display: flex;
+  justify-content: space-around;
+}
+
+.vieux_port img {
+  width: 22vw;
+  height: 30vw;
+  object-fit: cover;
+  border-radius: 20px 20px 0 0;
+}
+
+.parc_national img {
+  width: 22vw;
+  height: 30vw;
+  object-fit: cover;
+  border-radius: 20px 20px 0 0;
+}
+
+.fort img {
+  width: 20vw;
+  height: 11vw;
+  object-fit: cover;
+  border-radius: 20px 20px 0 0;
+}
+
+.iles img {
+  width: 20vw;
+  height: 11vw;
+  object-fit: cover;
+  border-radius: 20px 20px 0 0;
+}
+
+.basilique img {
+  width: 20vw;
+  height: 11vw;
+  object-fit: cover;
+  border-radius: 20px 20px 0 0;
+}
+
+.parc_longchamp img {
+  width: 20vw;
+  height: 11vw;
+  object-fit: cover;
+  border-radius: 20px 20px 0 0;
+}
+
+.activities h3 {
+  margin-left: 20px;
+}
+
+.small_images {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+/************************** Footer *************************/
+
+footer {
+  background-color: #f2f2f2;
+  display: flex;
+  padding-bottom: 30px;
+  padding-top: 18px;
+}
+
+footer ul {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  padding: 0;
+}
+
+.footer_list {
+  width: 50%;
+  margin-left: 30px;
+}
+
+footer li {
+  padding: 5px;
+}
+
+footer h3 {
+  margin-left: 5px;
+}
