--- a/style.css
+++ b/style.css
@@ -118,7 +118,8 @@ h3 + ul {
 }
 
 .filters li:hover {
-  background-color: #0065fc;
+  border: 2px solid #0065fc;
+  background-color: #deebff;
   font-style: italic;
 }
 
