--- a/style.css
+++ b/style.css
@@ -163,8 +163,8 @@ h3 + ul {
   border: 4px solid transparent;
   border-radius: 20px;
   box-shadow: 1px 1px 8px #e2e2e2;
-  width: 30%;
-  height: 13.5vw;
+  width: 246px;
+  height: 199px;
 }
 
 .first_hotel,
@@ -176,7 +176,7 @@ h3 + ul {
 
 .hotel img {
   width: 100%;
-  height: 8vw;
+  height: 114px;
   object-fit: cover;
   border-radius: 20px 20px 0 0;
 }
@@ -234,15 +234,15 @@ h3 + ul {
   border: 4px solid transparent;
   border-radius: 20px;
   box-shadow: 1px 1px 8px #e2e2e2;
-  width: 72%;
-  height: 10vw;
+  width: 343px;
+  height: 144px;
   margin: 15px;
   display: flex;
 }
 
 .hotel_2 img {
-  width: 9vw;
-  height: 10vw;
+  width: 127px;
+  height: 100%;
   object-fit: cover;
   border-radius: 20px 0 0 20px;
 }
@@ -365,5 +365,10 @@ footer h3 {
 
 /**************** Media-queries **********************/
 
-@media screen and (max-width: ) {
-}
+/***************** Smartphones ***********************/
+
+/* @media screen and (max-width: 667px) {
+  body {
+    background-color: red;
+  }
+} */
