--- a/style.css
+++ b/style.css
@@ -523,4 +523,35 @@ footer h3 {
     margin-bottom: 5px;
     margin-left: 10px;
   }
+
+  #activities {
+    margin: 20px;
+  }
+
+  .activities {
+    flex-direction: column;
+  }
+
+  .activities img {
+    width: 100%;
+    height: 150px;
+  }
+
+  .activities article {
+    height: auto;
+    margin: 10px;
+    width: 80vw;
+  }
+
+  #activities h2 {
+    margin-left: 18px;
+  }
+
+  footer {
+    flex-direction: column;
+  }
+
+  .footer_list {
+    width: 80%;
+  }
 }
