--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: "Raleway", sans-serif;
   margin: 0;
+  padding: 0;
 }
 
 a {
@@ -421,6 +422,12 @@ footer h3 {
 
   h1 {
     font-size: 1.5em;
+  }
+  .fa-map-marker-alt {
+    border-radius: 14px 0px 0px 14px;
+    width: 20px;
+    height: 20px;
+    padding: 17px;
   }
   .search {
     margin: 20px;
