--- a/responsive.css
+++ b/responsive.css
@@ -25,6 +25,7 @@
 
   nav li {
     margin: 0;
+    height: 21.5px;
   }
 
   nav a {
@@ -33,7 +34,7 @@
 
   .menu_hosting {
     width: 50%;
-    padding-left: 15px;
+    padding-left: 30px;
     padding-bottom: 10px;
   }
 
@@ -47,6 +48,7 @@
     border-bottom: 3px solid #f2f2f2;
     width: 100%;
     padding: 0;
+    height: 30px;
   }
 
   nav a:hover {
