--- a/responsive.css
+++ b/responsive.css
@@ -2,7 +2,7 @@
 
 /***************** Smartphone version portrait ***********************/
 
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 764px) {
   .sign_up {
     position: absolute;
     top: 47px;
@@ -25,7 +25,7 @@
 
   nav li {
     margin: 0;
-    height: 21.5px;
+    height: 21px;
   }
 
   nav a {
@@ -221,3 +221,5 @@
     width: 80%;
   }
 }
+
+/************************ tablette portrait **************************/
