--- a/responsive.css
+++ b/responsive.css
@@ -2,7 +2,7 @@
 
 /***************** Smartphone version portrait ***********************/
 
-@media screen and (max-width: 764px) {
+@media screen and (max-width: 376px) {
   .sign_up {
     position: absolute;
     top: 47px;
@@ -65,6 +65,7 @@
 
   h1 {
     font-size: 1.5em;
+    margin: 30px;
   }
   .fa-map-marker-alt {
     border-radius: 14px 0px 0px 14px;
@@ -73,17 +74,18 @@
     padding: 17px;
   }
   .search {
-    margin: 20px;
+    margin: 0;
   }
 
   .search p {
     margin-bottom: 10vw;
+    margin: 30px;
   }
 
   .form {
     width: 90%;
     height: 54px;
-    margin: 20px 0 20px 0;
+    margin: 20px 0 20px 30px;
   }
 
   .btn_search {
@@ -114,21 +116,27 @@
     margin-right: 10px;
   }
 
+  .filters h3 {
+    margin: 0;
+    margin-left: 30px;
+  }
   .filters li {
     margin-left: 5px;
   }
 
   .filters ul {
-    margin: 0;
+    margin-left: 18px;
     padding: 0;
   }
 
   .info {
     margin-top: 30px;
+    margin: 30px;
   }
 
   .info p {
     font-size: 0.9em;
+    margin-left: 0px;
   }
 
   /**** Hébergements et les plus populaires ****/
@@ -221,5 +229,3 @@
     width: 80%;
   }
 }
-
-/************************ tablette portrait **************************/
