--- a/responsive.css
+++ b/responsive.css
@@ -1,5 +1,5 @@
 /**************** Media-queries **********************/
-/*----------------------tablette (portrait)-------------*/
+/********************* tablette portrait ********************/
 
 @media screen and (min-width: 380px) and (max-width: 769px) {
   .sign_up {
@@ -77,6 +77,7 @@
 
   #hosting {
     flex-direction: column-reverse;
+    margin: 0;
   }
 
   .most_popular {
@@ -85,6 +86,17 @@
     padding-bottom: 15px;
   }
 
+  .most_popular a {
+    margin-top: 30px;
+  }
+
+  .most_popular h3 {
+    font-size: 1.5em;
+  }
+
+  .most_popular p {
+    padding-top: 20px;
+  }
   .hotel_2 {
     width: 85%;
     height: 30vw;
@@ -103,7 +115,7 @@
   .first_hotel,
   .second_hotel {
     flex-direction: column;
-    margin: 5px;
+    margin: 20px;
   }
 
   .hosting_marseille h2 {
