--- a/responsive.css
+++ b/responsive.css
@@ -127,11 +127,12 @@
     height: auto;
     margin: 10px;
     margin-left: 25px;
+    padding-bottom: 20px;
   }
 
   .hosting_marseille img {
     width: 100%;
-    height: 30vw;
+    height: 27vw;
   }
 
   .view_more {
