--- a/responsive.css
+++ b/responsive.css
@@ -2,6 +2,7 @@
 /********************* tablette portrait ********************/
 
 @media screen and (min-width: 380px) and (max-width: 769px) {
+  /** menu **/
   .sign_up {
     position: absolute;
     top: 47px;
@@ -40,18 +41,11 @@
     padding-bottom: 15px;
   }
 
-  .menu_hosting:hover {
-    border-bottom: 4px solid #0065fc;
-  }
-
-  .menu_activites:hover {
-    border-bottom: 4px solid #0065fc;
-  }
-
   nav a:hover {
     border-top: none;
   }
 
+  /**Filtres**/
   .form {
     width: 90%;
   }
@@ -75,6 +69,7 @@
     margin-left: -10px;
   }
 
+  /** hébergements et les plus populaires **/
   #hosting {
     flex-direction: column-reverse;
     margin: 0;
@@ -139,7 +134,7 @@
     margin-bottom: 5px;
     margin-left: 10px;
   }
-
+  /** activités **/
   #activities {
     margin: 40px;
   }
@@ -158,7 +153,7 @@
     width: 85vw;
     margin: 10px;
   }
-
+  /** footer **/
   footer {
     flex-direction: column;
   }
