Fin du projet Reservia

--- a/responsive.css
+++ b/responsive.css
@@ -1,6 +1,7 @@
 /**************** Media-queries **********************/
 
 @media screen and (max-width: 1340px) {
+  /* hébergements */
   .hosting_marseille article {
     height: 18vw;
     width: 17vw;
@@ -26,7 +27,7 @@
   .stars_popular {
     margin: 40px 0 0 15px;
   }
-
+  /* Activités  */
   .activities article {
     width: 19vw;
     height: auto;
@@ -40,10 +41,11 @@
 /*************** tablette paysage *************/
 
 @media screen and (max-width: 1280px) {
+  /* formulaire  */
   .form {
     width: 40vw;
   }
-
+  /* hébergements  */
   #hosting {
     flex-direction: column-reverse;
     margin: 0;
@@ -69,7 +71,7 @@
   .hotel_2 {
     width: 85%;
   }
-
+  /* populaire  */
   .most_popular {
     width: 100%;
     border-radius: 0;
@@ -82,7 +84,7 @@
   .hotel_2 img {
     width: 30vw;
   }
-
+  /* activités  */
   #activities h2 {
     margin-left: 0;
   }
@@ -95,7 +97,7 @@
     width: 20vw;
     height: auto;
   }
-
+  /* footer  */
   footer {
     width: 100%;
   }
@@ -263,6 +265,7 @@
 /***************** Smartphone version portrait ***********************/
 
 @media screen and (max-width: 376px) {
+  /* header  */
   .sign_up {
     position: absolute;
     top: 47px;
@@ -341,7 +344,7 @@
     margin-bottom: 10vw;
     margin: 30px;
   }
-
+  /* formulaire */
   .form {
     width: 90%;
     height: 54px;
@@ -457,7 +460,7 @@
     margin-bottom: 5px;
     margin-left: 10px;
   }
-
+  /* activtités  */
   #activities {
     margin: 20px;
   }
@@ -480,7 +483,7 @@
   #activities h2 {
     margin-left: 18px;
   }
-
+  /* footer  */
   footer {
     flex-direction: column;
   }
