--- a/style.css
+++ b/style.css
@@ -4,12 +4,21 @@ body {
   padding: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 a {
   text-decoration: none;
   color: black;
 }
 
 /********************** Header ****************************/
+
+nav img {
+  width: 110px;
+  margin-left: 25px;
+}
 
 nav {
   display: flex;
@@ -258,6 +267,11 @@ h3 + ul {
 
 .stars_popular {
   margin: 45px 10px 0 15px;
+}
+
+.black {
+  margin-right: 50px;
+  font: size 20px;
 }
 
 /************************ Activités**********************/
